--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
+    "gsap": "^3.13.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.6"
   }
